--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
-</head>
-<body>
-    
-</body>
-</html>
+<header>
+    <div class = "menu">
+        <div class = "img">
+            <p>InfoDev</p>
+        </div>
+        <div>
+            <ol>
+                <a><li><img src = "user.svg"/>LOGIN</li></a>
+                <a><li><img src = "document.svg"/>MEUS PEDIDOS</li></a>
+                <a><li><img src = "contact.svg"/>FALE CONOSCO</li></a>	
+            </ol>
+        </div>
+        <div>
+            <ol>
+                <a><li><img src = "star.svg"/>FAVORITOS</li></a>
+                <a><li><img src = "carrinho.svg"/>MEUS CUPONS</li></a>	
+            </ol>
+        </div>
+    </div>
+    <div class = "pesquisa">
+        <div>
+            <a><input type = "search" /><img src = "search.svg"/></a>
+        </div>
+        <div>
+            <ol>
+                <a><li>HARDWARE</li></a>
+                <a><li>SMARTPHONE</li></a>
+                <a><li>PERIFERICOS</li></a>
+                <a><li>MONITORES</li></a>
+                <a><li>GAMER</li></a>
+                <a><li>HOME OFFICE</li></a>
+            </ol>
+        </div>
+    </div>
+</header>
