--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel = "stylesheet" type = "text/css" href = "/css/header.css" />
+    <link  rel = "stylesheet" type = "text/css" href = "/css/footer.css" />
     <title>InfoDev - Loja de Informaticat</title>
 </head>
 <body>
