--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,6 +9,10 @@
     <title>InfoDev - Loja de Informaticat</title>
 </head>
 <body>
-    
+    <%- include('./partials/header.ejs') %>
+    <main>
+
+    </main>
+    <%- include('./partial/footer.ejs') %>
 </body>
 </html>
