--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>InfoDev - Loja de Informaticat</title>
 </head>
+
 <body>
-    
+    <container>
+        <section>
+            <!--Header-->
+            <%- include("./partials/header")  %>
+            <!--Header-end-->
+        <div class="home-image">
+            <img src="images\app_banner.png" alt="">
+        </section>
+    </container>
 </body>
+
 </html>
