--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
-</head>
-<body>
-    
-</body>
-</html>
+<header id="main-header">
+    <div class="top-header">
+        <div class="logo">
+            <img src="images/infodev.png" alt="infodev">
+        </div>
+        <div class="top-icons">
+            <span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"
+                style="font-size: 19.354839324951172px;"></span>
+            <span class="iconify" data-inline="false" data-icon="bi:cart" style="font-size: 20px;"></span>
+            <span class="iconify" data-inline="false" data-icon="bi:suit-heart" style="font-size: 20px;"></span>
+          
+                    
+        </div>
+        <div class="top-right-box">
+            <div class="menu-icon">
+                <span class="iconify" data-inline="false" data-icon="gg:menu" style="color: #e17055; font-size: 24px;"></span>
+            </div>
+            
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="searchbar">
+        <form class="example" action="action_page.php">
+            <input type="text" placeholder="O que você está procurando?" name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
+    <nav>
+        <ul id="navbar-list">
+            <li><a href="#">Hardware</a></li>
+            <li><a href="#">Smartphones</a></li>
+            <li><a href="#">Perifericos</a></li>
+            <li><a href="#">Computadores</a></li>
+            <li><a href="#">Monitores</a></li>
+            <li><a href="#">Gamer</a></li>
+            <li><a href="#">Home Office</a></li>
+        </ul>
+    </nav>
+</header>
