--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,20 +10,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link  rel = "stylesheet" type = "text/css" href = "/css/header.css" />
     <link  rel = "stylesheet" type = "text/css" href = "/css/footer.css" />
-    <link rel="stylesheet" href="css/main.css">
+    <link  rel = "stylesheet" type = "text/css" href = "/css/main.css" />
+    <link  rel = "stylesheet" type = "text/css" href = "/css/oferta.css" />
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <script src="less.js" type="text/javascript"></script>
+    
 
     <title>InfoDev - Loja de Informaticat</title>
 </head>
 
 <body>
     <container>
-        <section>
-            <!--Header-->
-            <%- include("./partials/header")  %>
-            <!--Header-end-->
-        <div class="home-image">
-            <img src="images\app_banner.png" alt="">
-        </section>
+            <!--header-->
+                 <%- include("./partials/header")  %>
+            <!--header-end-->
+            <div class="home-image">
+                <img src="images\app_banner.png" alt="">
+            </div>
+            <!--oferta-->
+                <%- include("./partials/oferta") %>
     </container>
 </body>
 
