--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,25 +1,38 @@
 <header id="main-header">
     <div class="top-header">
-        <div class="logo">
-            <img src="images/infodev.png" alt="infodev">
-        </div>
-        <div class="top-icons">
-            <span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"
-                style="font-size: 19.354839324951172px;"></span>
-            <span class="iconify" data-inline="false" data-icon="bi:cart" style="font-size: 20px;"></span>
-            <span class="iconify" data-inline="false" data-icon="bi:suit-heart" style="font-size: 20px;"></span>
-          
-                    
-        </div>
-        <div class="top-right-box">
-            <div class="menu-icon">
-                <span class="iconify" data-inline="false" data-icon="gg:menu" style="color: #e17055; font-size: 24px;"></span>
+        <div class="top-menu">
+            <div class="logo">
+                <img src="images/infodev.png" alt="infodev">
             </div>
-            
-                
+            <div class="top-icons">
+                <span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"></span>
+                <span class="iconify" data-inline="false" data-icon="bi:suit-heart"></span>
+                <span class="iconify" data-inline="false" data-icon="bi:cart"></span>
             </div>
+        </div>
+
+        <div class="menu-bar">
+            <nav class="nav">
+                <input type="checkbox" id="nav__checkbox" class="nav__checkbox">
+                <label for="nav__checkbox" class="nav__toggle">
+                    <div class="menu"><span class="iconify" data-inline="false" data-icon="gg:menu"
+                            style="color: #e17055; font-size: 24px;"></span></div>
+                    <div class="close"><span class="iconify" data-inline="false" data-icon="eva:close-outline"
+                            style="color: #E17055; font-size: 24px;" data-flip="horizontal"></span></div>
+                </label>
+                <ul id="navbar-list">
+                    <li><a href="#">Hardware</a></li>
+                    <li><a href="#">Smartphones</a></li>
+                    <li><a href="#">Perifericos</a></li>
+                    <li><a href="#">Computadores</a></li>
+                    <li><a href="#">Monitores</a></li>
+                    <li><a href="#">Gamer</a></li>
+                    <li><a href="#">Home Office</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
+    
 
     <div class="searchbar">
         <form class="example" action="action_page.php">
@@ -27,15 +40,5 @@
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
-    <nav>
-        <ul id="navbar-list">
-            <li><a href="#">Hardware</a></li>
-            <li><a href="#">Smartphones</a></li>
-            <li><a href="#">Perifericos</a></li>
-            <li><a href="#">Computadores</a></li>
-            <li><a href="#">Monitores</a></li>
-            <li><a href="#">Gamer</a></li>
-            <li><a href="#">Home Office</a></li>
-        </ul>
-    </nav>
+
 </header>
