--- a/Public/css/header.css
+++ b/Public/css/header.css
@@ -40,6 +40,7 @@
 .menu{
 		margin-top: 0.4rem;
 		text-align: center;
+		margin-bottom: 0.820em;
 }
 .menu ol{
 
@@ -52,19 +53,13 @@
 	list-style-type: none;
 	text-align:center;
 }
-.main-header {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	position: fixed;
-}
+
 .top-header{
 	margin: 2vh 5vw;
   }
   
   .top-icons {
-	margin: 1vh 2vw;
+	margin: 3vh 2vw;
 	width: 30vw;
 	display: flex;
 	justify-content: space-between;
@@ -72,7 +67,7 @@
 }
 .top-menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
 }
 #nav__checkbox{
