--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,9 +5,9 @@
                 <img src="images/infodev.png" alt="infodev">
             </div>
             <div class="top-icons">
-                <span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"></span>
-                <span class="iconify" data-inline="false" data-icon="bi:suit-heart"></span>
-                <span class="iconify" data-inline="false" data-icon="bi:cart"></span>
+                <a href="#"><span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"></span></a>
+                <a href="#"><span class="iconify" data-inline="false" data-icon="bi:suit-heart"></span></a>
+                <a href="#"><span class="iconify" data-inline="false" data-icon="bi:cart"></span></a>
             </div>
         </div>
 
