--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,7 +14,7 @@
     <link  rel = "stylesheet" type = "text/css" href = "/css/oferta.css" />
     
 
-    <title>InfoDev - Loja de Informaticat</title>
+    <title>InfoDev - Loja de Informatica</title>
 </head>
 
 <body>
