Subindo as imagens
Subindo as imagens e alterando o caminho para as pastas

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,6 +13,6 @@
     <main>
 
     </main>
-    <%- include('./partial/footer.ejs') %>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
