--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -14,14 +14,14 @@
             <h2>CONTATOS INFODEV</h2>
             </div>
             <div class = "rsocial-icon">
-                <a><img src = "insta.svg"/>@infodev</a>
-                <a><img src = "face.svg"/>infodev</a>
-                <a><img src = "email.svg"/>contato@infodev.com</a>
-                <a><img src = "twitter.svg"/>@infodev</a>
+                <a><img src = "/images/insta.svg"/>@infodev</a>
+                <a><img src = "/images/face.svg"/>infodev</a>
+                <a><img src = "/images/email.svg"/>contato@infodev.com</a>
+                <a><img src = "/images/twitter.svg"/>@infodev</a>
             </div>
         </div>
         <div class = "logo">
-                <img src = "logo.jpeg" />
+                <img src = "/images/logo.jpeg" />
         </div>
     </div>
 </footer>
