--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,21 +5,21 @@
         </div>
         <div>
             <ol>
-                <a><li><img src = "user.svg"/>LOGIN</li></a>
-                <a><li><img src = "document.svg"/>MEUS PEDIDOS</li></a>
-                <a><li><img src = "contact.svg"/>FALE CONOSCO</li></a>	
+                <a><li><img src = "/images/user.svg"/>LOGIN</li></a>
+                <a><li><img src = "/images/document.svg"/>MEUS PEDIDOS</li></a>
+                <a><li><img src = "/images/contact.svg"/>FALE CONOSCO</li></a>	
             </ol>
         </div>
         <div>
             <ol>
-                <a><li><img src = "star.svg"/>FAVORITOS</li></a>
-                <a><li><img src = "carrinho.svg"/>MEUS CUPONS</li></a>	
+                <a><li><img src = "/images/star.svg"/>FAVORITOS</li></a>
+                <a><li><img src = "/images/carrinho.svg"/>MEUS CUPONS</li></a>	
             </ol>
         </div>
     </div>
     <div class = "pesquisa">
         <div>
-            <a><input type = "search" /><img src = "search.svg"/></a>
+            <a><input type = "search" /><img src = "/images/search.svg"/></a>
         </div>
         <div>
             <ol>
