--- a/Public/css/footer.css
+++ b/Public/css/footer.css
@@ -1,8 +1,13 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    list-style: none;
+    outline: none;
+    box-sizing: border-box;
+    font-family: Roboto;
 }
 .rodape{
 	margin-top: 20px;
