--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -27,6 +27,11 @@
             </div>
             <!--oferta-->
                 <%- include("./partials/oferta") %>
+            <!--FIM-oferta-->
+
+            <!--Footer-->
+            <%- include("./partials/footer") %>
+            <!--footer-fim-->
     </container>
 </body>
 
