--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class = "rodape">
-        <div>
+        <div class="usuario">
             <ol>
                 <a><li>LOGIN</li></a>
                 <a><li>MEUS PEDIDOS</li></a>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class = "logo">
-                <img src = "logo.jpeg" />
+                <img src = 'images/infodev.png' />
         </div>
     </div>
 </footer>
