--- a/Public/css/header.css
+++ b/Public/css/header.css
@@ -31,6 +31,17 @@
 	padding: 10px;	
 }*/
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    list-style: none;
+    outline: none;
+    box-sizing: border-box;
+    font-family: Roboto;
+}
 
 .menu{
 		margin-top: 0.4rem;
