--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -5,7 +7,7 @@
     list-style: none;
     outline: none;
     box-sizing: border-box;
-        font-family: Roboto;
+    font-family: Roboto;
 }
 html{ 
     font-size: 17px;
