--- a/src/views/partials/oferta.ejs
+++ b/src/views/partials/oferta.ejs
@@ -17,8 +17,7 @@
         </div>
         <div class="ctn-produto-preco">
             <div class="produto-fabricante">Amd</div>
-            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 -
-                100-100000065BOX
+            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
             </div>
             <div id="stars" class="flex-row-center">
                 <div class="star star-checked"></div>
@@ -48,8 +47,7 @@
         </div>
         <div class="ctn-produto-preco">
             <div class="produto-fabricante">Amd</div>
-            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 -
-                100-100000065BOX
+            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
             </div>
             <div id="stars" class="flex-row-center">
                 <div class="star star-checked"></div>
