--- a/Public/css/oferta.css
+++ b/Public/css/oferta.css
@@ -22,7 +22,8 @@
 .produto {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    border-bottom: 2px solid gray ;
 }
 .star-number {
     font-size: 0.6em;
