--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -20,8 +20,8 @@
                 <a><img src = "/images/twitter.svg"/>@infodev</a>
             </div>
         </div>
-        <div class = "logo">
-                <img src = 'images/infodev.png' />
+        <div class = "logo1">
+                <img src = '/images/logo.jpeg' />
         </div>
     </div>
 </footer>
