--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="top-header">
         <div class="top-menu"> 
             <div class="logo">
-                <img src="images/infodev.png" alt="infodev">
+                <img src="/images/infodev.png" alt="infodev">
             </div>
             <div class="top-icons">
                 <a href="#"><span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"></span></a>
