--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,6 +10,34 @@
                 <a href="#"><span class="iconify" data-inline="false" data-icon="bi:cart"></span></a>
             </div>
         </div>
+        <div>
+            <ol>
+                <a><li><img src = "/images/user.svg"/>LOGIN</li></a>
+                <a><li><img src = "/images/document.svg"/>MEUS PEDIDOS</li></a>
+                <a><li><img src = "/images/contact.svg"/>FALE CONOSCO</li></a>	
+            </ol>
+        </div>
+        <div>
+            <ol>
+                <a><li><img src = "/images/star.svg"/>FAVORITOS</li></a>
+                <a><li><img src = "/images/carrinho.svg"/>MEUS CUPONS</li></a>	
+            </ol>
+        </div>
+    </div>
+    <div class = "pesquisa">
+        <div>
+            <a><input type = "search" /><img src = "/images/search.svg"/></a>
+        </div>
+        <div>
+            <ol>
+                <a><li>HARDWARE</li></a>
+                <a><li>SMARTPHONE</li></a>
+                <a><li>PERIFERICOS</li></a>
+                <a><li>MONITORES</li></a>
+                <a><li>GAMER</li></a>
+                <a><li>HOME OFFICE</li></a>
+            </ol>
+        </div>
 
         <div class="menu-bar">
             <nav class="nav">
