--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,10 +2,12 @@
   <div class="top-header">
     <div class="top-menu">
       <div class="logo">
+        <a href="/">
         <img src="/images/infodev.png" alt="infodev" />
+        </a>
       </div>
       <div class="top-icons">
-        <a href="#"
+        <a href="/login"
           ><span
             class="iconify"
             data-inline="false"
