--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,7 +93,7 @@ form.example::after {
 
 .top-header {
   margin: 2vh 5vw;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 .top-icons {
@@ -101,7 +101,6 @@ form.example::after {
   width: 30vw;
   display: flex;
   justify-content: space-between;
-  font-size: 20px;
   color: var(--gray-color);
 }
 .top-icons a {
@@ -150,9 +149,11 @@ form.example::after {
   color: inherit;
 }
 /* OFERTA */
+.oferta {
+  font-size: 1.7rem;
+}
 .oferta h2 {
   color: #365dae;
-  font-size: 17px;
   font-family: "roboto_condensedbold";
   padding: 16px 22px;
   text-transform: uppercase;
@@ -227,14 +228,14 @@ form.example::after {
 .rsocial-icon a {
   margin-bottom: 10px;
   align-items: center;
-  color: #ff7f24;
+  color: #ff4500;
 }
 .rsocial-icon a img {
   margin-bottom: -5px;
   margin-right: 3px;
 }
 
-.rsocial {
+ .usuario, .rsocial {
   margin-bottom: 10px;
   color: var(--primary-color);
 }
@@ -246,6 +247,12 @@ form.example::after {
   font-weight: 500;
   color: var(--primary-color);
 }
+
+.rodape a:link {
+  text-decoration: none;
+
+}
+
 .logo img {
   width: 150px;
 }
