--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,9 @@
 <footer class="rodape-principal">
     <div class = "rodape">
         <div class="usuario">
+            <h2>USUÁRIO</h2>
             <ol>
-                <a><li>LOGIN</li></a>
+                <a href="/login"><li>LOGIN</li></a>
                 <a><li>MEUS PEDIDOS</li></a>
                 <a><li>FALE CONOSCO</li></a>	
                 <a><li>FAVORITOS</li></a>
@@ -11,7 +12,7 @@
         </div>
         <div>
             <div class = "rsocial">
-            <h2>CONTATOS INFODEV</h2>
+            <h2>CONTATOS</h2>
             </div>
             <div class = "rsocial-icon">
                 <a><img src = "/images/insta.svg"/>@infodev</a>
