--- a/src/views/partials/oferta.ejs
+++ b/src/views/partials/oferta.ejs
@@ -1,5 +1,5 @@
 <div class="oferta">
-    <h2>Dia dos Pais</h2>
+    <h2>Ofertas da Semana</h2>
     <div class="produto">
         
         <div class="desconto">
@@ -25,7 +25,6 @@
                 <div class="star star-checked"></div>
                 <div class="star star-checked"></div>
                 <div class="star star-checked"></div>
-                <span class="star-number">128</span>
             </div>
 
 
@@ -55,7 +54,6 @@
                 <div class="star star-checked"></div>
                 <div class="star star-checked"></div>
                 <div class="star star-checked"></div>
-                <span class="star-number">128</span>
             </div>
 
 
