inclui footer na pag categoria

--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -5,5 +5,9 @@
   <body>
     <!--header-->
     <%- include("./partials/header") %>
+    <!--header-fim-->
+    <!--Footer-->
+    <%- include("./partials/footer") %>
+    <!--footer-fim-->
   </body>
 </html>
