--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -10,15 +10,15 @@
                 <a><li>MEUS CUPONS</li></a>
             </ol>
         </div>
-        <div>
-            <div class = "rsocial">
+        <div class = "rsocial">
             <h2>CONTATOS</h2>
-            </div>
             <div class = "rsocial-icon">
-                <a><img src = "/images/insta.svg"/>@infodev</a>
-                <a><img src = "/images/face.svg"/>infodev</a>
-                <a><img src = "/images/email.svg"/>contato@infodev.com</a>
-                <a><img src = "/images/twitter.svg"/>@infodev</a>
+                <ol>
+                    <a><li><img src = "/images/insta.svg"/>@infodev</li></a>
+                    <a><li><img src = "/images/face.svg"/>infodev</li></a>
+                    <a><li><img src = "/images/email.svg"/>contato@infodev.com</li></a>
+                    <a><li><img src = "/images/twitter.svg"/>@infodev</li></a>
+                </ol>
             </div>
         </div>
         <div class = "logo">
