--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
             data-icon="bi:suit-heart"
           ></span
         ></a>
-        <a href="#"
+        <a href="/carrinho"
           ><span class="iconify" data-inline="false" data-icon="bi:cart"></span
         ></a>
       </div>
