--- a/public/css/main.css
+++ b/public/css/main.css
@@ -165,65 +165,38 @@ form.example::after {
   flex-wrap: wrap;
   justify-content: center;
   border-bottom: 2px solid var(--gray-color);
+  margin: 1rem;
 }
-.star-number {
-  font-size: 0.6em;
-  display: block;
-  margin-left: 3px;
-  color: var(--gray-color);
-}
+
 .ctn-produto {
   padding: 10px 16px;
+  
   border-top: 1px solid var(--gray-color);
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: flex-start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  flex-direction: row;
-  color: var(--gray-color);
-  position: relative;
-  min-height: 96px;
+  
 }
 
 .pnome {
-  font-size: 17px;
+  font-size: 2rem;
   display: block;
-  display: -webkit-box;
-  max-width: 100%;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+
 }
-.ctn-produto-preco {
-  margin-left: 30px;
-}
-.ctn-produto #stars .star:before {
-  font-size: 22px;
-}
+
+
 /* FOOTER  */
 .rodape-principal {
   font-size: 1.7rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
 }
 .rodape {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-around;
-}
-.rsocial-icon {
+  margin-top: 0.60rem;
   display: flex;
   flex-direction: column;
+}
+.rsocial-icon {
+  margin-top: 0.60rem;
 }
 .rsocial-icon a {
   margin-bottom: 10px;
@@ -263,7 +236,7 @@ form.example::after {
     display: block;
   } /* hi-res laptops and desktops */
 }
-@media (min-width: 1281px) {
+@media (min-width: 1280px) {
   .nav {
     display: block;
   } /* hi-res laptops and desktops */
@@ -296,5 +269,13 @@ form.example::after {
     list-style-type: none;
     font-weight: 600;
     padding: 10px;
+  }
+  .rodape-principal{
+    justify-content: center;
+  }
+  .rodape {
+    margin-top: 0.60rem;
+    display: block;
+  
   }
 }
