--- a/src/views/carrinho.ejs
+++ b/src/views/carrinho.ejs
@@ -5,12 +5,9 @@
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-end-->
-    <div class="home-image">
-      <img src="images\app_banner.png" alt="" />
+    <div class="compras">
+      
     </div>
-    <!--oferta-->
-    <%- include("./partials/oferta") %>
-    <!--FIM-oferta-->
     
     <!--Footer-->
     <%- include("./partials/footer") %>
