--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -5,13 +5,9 @@
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-end-->
-    <div class="home-image">
-      <img src="images\app_banner.png" alt="" />
-    </div>
-    <!--oferta-->
-    <%- include("./partials/oferta") %>
-    <!--FIM-oferta-->
-    
+    <div class="produtos">
+      
+    </div>    
     <!--Footer-->
     <%- include("./partials/footer") %>
     <!--footer-fim-->
