--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,6 +178,7 @@ form.example::after {
 .pnome {
   font-size: 2rem;
   display: block;
+  margin-bottom: 0.8rem;
 
 }
 
@@ -200,24 +201,23 @@ form.example::after {
   margin-top: 0.60rem;
 }
 .rsocial-icon a {
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
   align-items: center;
   color: #ff4500;
 }
 .rsocial-icon a img {
-  margin-bottom: -5px;
   margin-right: 3px;
 }
 
  .usuario, .rsocial {
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
   color: var(--primary-color);
 }
 .rodape ol {
   list-style-type: none;
 }
 .rodape li {
-  margin-bottom: 10px;
+  margin-bottom: 0.8rem;
   font-weight: 500;
   color: var(--primary-color);
 }
@@ -236,6 +236,14 @@ form.example::after {
   .nav {
     display: block;
   } /* hi-res laptops and desktops */
+  .rodape {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  
+  }
 }
 @media (min-width: 1280px) {
   .nav {
@@ -272,11 +280,16 @@ form.example::after {
     padding: 10px;
   }
   .rodape-principal{
-    justify-content: center;
-  }
-  .rodape {
     margin-top: 0.60rem;
     display: block;
+    
+  }
+  .rodape {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
   
   }
 }
