--- a/src/views/carrinho.ejs
+++ b/src/views/carrinho.ejs
@@ -6,7 +6,11 @@
     <%- include("./partials/header") %>
     <!--header-end-->
     <div class="compras">
-      
+        <div class="compras-lado-esquerdo">
+            <%- include(".partials/painel-user") %>
+        </div>
+        <div class="compras-meio"></div>
+        <div class="compras-lado-dirieto"></div>
     </div>
     
     <!--Footer-->
