--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,6 +233,45 @@ form.example::after {
 .logo img {
   width: 150px;
 }
+/* User Panels*/
+.compras{
+  margin-top: 2rem;
+  color: #ff4500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.compras-meio, .compras-meio h2{
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.user-details p, .user-details h2 {
+  font-size: 2rem;
+}
+
+.profile-btn {
+  width: 20rem;
+  padding: 1rem 2rem 1rem 2rem;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  background: #ff4500;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+  border: 2px solid #ff4500;
+}
+
 
 /*  MEDIA QUERIES */
 @media (min-width: 736px) {
