--- a/src/views/carrinho.ejs
+++ b/src/views/carrinho.ejs
@@ -6,11 +6,13 @@
     <%- include("./partials/header") %>
     <!--header-end-->
     <div class="compras">
-        <div class="compras-lado-esquerdo">
-            <%- include(".partials/painel-user") %>
+             
+        <div class="compras-meio">
+                <h2>
+                 Seu Carrinho está Vazio
+                </h2>
+                <img src="https://m.media-amazon.com/images/G/01/cart/empty/kettle-desaturated._CB445243794_.svg">
         </div>
-        <div class="compras-meio"></div>
-        <div class="compras-lado-dirieto"></div>
     </div>
     
     <!--Footer-->
