--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
   <%- include("./partials/head")%>
 
   <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-fim-->
+
+  
+    <div class = "categoria">
+      <h2> Categorias </h2>
+    </div>
+    <nav class = "menu">
+      <ul>
+        <li>produto 1</li>
+        <li>produto 2</li>
+        <li>produto 3</li>
+      </ul>
+    </nav>
+<br>
+
     <!--Footer-->
     <%- include("./partials/footer") %>
     <!--footer-fim-->
