--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class = "logo">
-                <img src = 'images/infodev.png' />
+                <img src = '/images/infodev.png' />
         </div>
     </div>
 </footer>
