--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -8,21 +8,52 @@
     <%- include("./partials/header") %>
     <!--header-fim-->
 
-  
+<main class="corpo">
+
+<section>
+
     <div class = "categoria">
       <h2> Categorias </h2>
+
     </div>
     <nav class = "menu">
       <ul>
         <li>produto 1</li>
         <li>produto 2</li>
         <li>produto 3</li>
+        <li>produto 4</li>
+        <li>produto 5</li>
+        <li>produto 6</li>
       </ul>
     </nav>
+
+  </section>
+
+              <section>
+
+                <div class="caixa-produtos">produto1</div>
+                  <div class="caixa-produtos">produto2</div>
+                    <div class="caixa-produtos">produto3</div>
+                      <div class="caixa-produtos">produto4</div>
+                        <div class="caixa-produtos">produto5</div>
+                          <div class="caixa-produtos">produto6</div>
+
+              </section>
+
+</main>
+
+      <div class="background">
+        <p>abc</p>
+      </div>
 <br>
+
+
+<br>
+
 
     <!--Footer-->
     <%- include("./partials/footer") %>
     <!--footer-fim-->
+
   </body>
 </html>
