--- a/src/views/partials/panel-user.ejs
+++ b/src/views/partials/panel-user.ejs
@@ -1,9 +1,13 @@
+<div class="lado-esquerdo">
 <div class="client-avatar">
     <img src="/images/avatar.png" alt="Avatar" class="avatar">
 </div>
 <div class="user-details">
     <h2>Jeffrey Tech</h2>
     <p>address@hotmail.com</p>
+    <label>
+      <button class="profile-btn" type="submit">Notificações</button>
+    </label>
     <label>
         <button class="profile-btn" type="submit">Cadastro</button>
       </label>
@@ -17,6 +21,13 @@
         <button class="profile-btn" type="submit">Protocolos</button>
       </label>
       <label>
-        <button class="profile-btn" type="submit">Avaliações</button>
+        <button class="profile-btn" type="submit">Sorteios</button>
       </label>
+      <label>
+        <button class="profile-btn" type="submit">Arrempendimento</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Garantia</button>
+      </label>
+</div>
 </div>
