--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -11,9 +11,14 @@
     <!-- panel-user -->
     <%- include("./partials/panel-user") %>
     <!--panel-user-end-->
-    <div class="my account">
+    <div class="my-account">
+      <div class="account-details">
       <h3>Minha conta</h3>
       <p>Administre seus dados, endereço e pedidos</p>
+    </div>
+    <div class="caixa-detalhes">
+      
+    </div>
     </div>
   </main>   
      <!--footer-->
