--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -17,7 +17,24 @@
         <p>Administre seus dados, endereço e pedidos</p>
       </div>
       <div class="caixa-detalhes">
-
+        <div class="pedidos">
+          <div>
+            <table>
+            <thead>
+              <tr>  
+              <th>Nº do pedido: </th>
+              <th> Realiza:  </th>
+              <th> Status:  </th>
+              </tr>
+            </thead>
+            
+            <tbody>
+              <tr>  </tr>
+            </tbody>
+          </table>
+          </div>
+        </div>
+        <div class="favoritos"></div>
       </div>
     </div>
   </main>
