--- a/src/views/partials/panel-user.ejs
+++ b/src/views/partials/panel-user.ejs
@@ -18,7 +18,7 @@
         <button class="profile-btn" type="submit">Avaliações</button>
       </label>
       <label>
-        <button class="profile-btn" type="submit">Protocolos</button>
+        <button class="profile-btn" type="submit">Meus pedidos</button>
       </label>
       <label>
         <button class="profile-btn" type="submit">Sorteios</button>
