Pagina Pedido finalizado
Pagina de Pedido finalizado

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/login.css" />
   <link rel="stylesheet" href="/css/categoria.css" />
+  <link rel="stylesheet" href="/css/confirmacaoPedido.css" />
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
