--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -50,13 +50,13 @@
           </div>
         </label>
         <ul id="navbar-list">
-          <li><a href="#">Hardware</a></li>
-          <li><a href="#">Smartphones</a></li>
-          <li><a href="#">Perifericos</a></li>
-          <li><a href="#">Computadores</a></li>
-          <li><a href="#">Monitores</a></li>
-          <li><a href="#">Gamer</a></li>
-          <li><a href="#">Home Office</a></li>
+          <li><a href="/produto">Hardware</a></li>
+          <li><a href="/produto">Smartphones</a></li>
+          <li><a href="/produto">Perifericos</a></li>
+          <li><a href="/produto">Computadores</a></li>
+          <li><a href="/produto">Monitores</a></li>
+          <li><a href="/produto">Gamer</a></li>
+          <li><a href="/produto">Home Office</a></li>
         </ul>
       </nav>
     </div>
