--- a/src/views/partials/oferta.ejs
+++ b/src/views/partials/oferta.ejs
@@ -9,11 +9,11 @@
         </div>
        
         <div class="imagem">
-            <img src="https://images1.kabum.com.br/produtos/fotos/129451/processador-amd-ryzen-9-5950x-cache-72mb-3-4ghz-4-9ghz-max-turbo-am4-100-100000065box_1602603581_m.jpg"
-                class="b-lazy b-loaded"
-                alt="Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 - 100-100000065BOX"
-                title="Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 - 100-100000065BOX"
-                style="object-fit: scale-down;">
+            <img src="/images/processador-amd.jpg"
+                class=""
+                alt=""
+                title="AMD Ryzen 5 5600X"
+                >
         </div>
         <div class="ctn-produto-preco">
             <div class="produto-fabricante">Amd</div>
@@ -29,11 +29,11 @@
             <span>31%</span>
         </div>
         <div class="imagem">
-            <img src="https://images1.kabum.com.br/produtos/fotos/129451/processador-amd-ryzen-9-5950x-cache-72mb-3-4ghz-4-9ghz-max-turbo-am4-100-100000065box_1602603581_m.jpg"
-                class="b-lazy b-loaded"
-                alt="Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 - 100-100000065BOX"
-                title="Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo), AM4 - 100-100000065BOX"
-                style="object-fit: scale-down;">
+            <img src="/images/processador-amd.jpg"
+                class=""
+                alt=""
+                title="AMD Ryzen 5 5600X"
+                >
         </div>
         <div class="ctn-produto-preco">
             <div class="produto-fabricante">Amd</div>
