--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <%- include("./partials/head")%>
-
 <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-fim-->
-    <div class="bloco-produto">
-        <div class="tag"></div>
-        <div class="marca-produto"></div>
-        <div class="titulo-produto"></div>
-        <div class="imagem-produto"></div>
-        <div class="disponibilidade"></div>
-        <div class="ctn-preco"></div>
-        <div class="produtos-similares"></div>
-        <div class="adicionar-carrinho"></div>
-    </div>
+        <div class="bloco-produto">
+            <div class="tag">
+                <img src="/public/images/oferta_small.png" alt="">
+            </div>
+            <div class="marca-produto">
+                <h2>Husky Gaming</h2>
+                <div class="stars"></div>
+            </div>
+            <div class="titulo-produto">
+                <h1 class="nome-produto">Cadeira Gamer Husky Gaming Snow, Black - HSN-BK</h1>
+            </div>
+            <div class="caixa-imagem-produto">
+                <div class="descricao-produto"><details><summary>Detalhes</summary><h2>A Cadeira Gamer Husky Gaming Snow proporciona alto conforto e qualidade para as melhores horas do seu dia!</h2>
+                    <p>&nbsp;</p>
+                    <h3>Tudo isso aliado a um ótimo custo benefício.</h3>
+                    <p>&nbsp;</p>
+                    <p>Os games do momento ficam ainda mais empolgantes ao serem jogados em uma Cadeira Gamer Husky Gaming Snow, pois além do design moderno e robusto, a cadeira proporciona ótima performance nas partidas devido a sensação de conforto que é convertida em foco e concentração, tudo que um gamer de verdade precisa para ser o melhor!</p>
+                    <p>&nbsp;</p>
+                    <p>A Gamer Husky Gaming Snow conta com uma estrutura consistente e de fácil montagem, com rodas 100% Nylon, função butterfly que regula a sua altura de forma prática, couro sintético PU, um balanço com até 13º de ajuste e ainda um assento de 510x500mm com encosto de 510 x 700 mm, é fácil perceber que ela foi projetada para entregar muito conforto para os gamers de forma acessível.</p>
+                    <p>&nbsp;</p>
+                    <p>A Husky Gaming Snow conta com espuma de alta qualidade e suas características mais elogiadas são regulagem de altura por pistão à gás e design singular e ao mesmo tempo muito moderno.</p>
+                    <p>&nbsp;</p>
+                    <p>Dê um upgrade no seu espaço gamer com uma Cadeira Husky Gaming Snow e sinta a diferença!</p>
+                    <p>&nbsp;</p>
+                    <p>Qualidade com custo benefício para você enfrentar qualquer desafio gamer! Aproveite essa oportunidade e adquira a Cadeira Gamer Husky Gaming Snow no KaBuM!</p></details></div>
+                <div class="favoritos"></div>
+                <div class="imagem-produto">
+                    <img src="/images/cadeira-gamer.jpg" alt="cadeira-gamer" class="responsive">
+                </div>
+            </div>
+            <div class="comprar">
+                <div class="ctn-preco">
+                    <span class="preco">695R$</span>
+                </div>
+                <div class="ctn-checkout">
+                    <button name="" type="submit" class="button-laranja" id="">
+                        COMPRAR</button>
+                </div>
+            </div>
+            <hr class="separador-compra">
+        </div>
     <!--footer-->
     <%- include("./partials/footer") %>
     <!--footer-fim-->
