--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -11,7 +11,8 @@
     <!-- panel-user -->
     <%- include("./partials/panel-user") %>
     <!--panel-user-end-->
-    <div class="my-account">
+
+    <%#<div class="my-account">
       <div class="account-details">
         <h3>Minha conta</h3>
         <p>Administre seus dados, endereço e pedidos</p>
@@ -26,8 +27,33 @@
               <th> Realiza:  </th>
               <th> Status:  </th>
               </tr>
-            </thead>
-            
+            </thead>%>
+
+            <div class="quadro">
+              <div class="Quadrado-Magico">
+                <div width="180px" class="numero-pedido">
+                <div class="titulo-pedido">NÚMERO DO PEDIDO</div>
+                <div class="pedido">
+                #
+                22613775
+                </div>
+                </div>
+                <div width="140px" class="status">
+                  <div class="status-pedido">STATUS</div>
+                  <div class="cancelado">Cancelado</div>
+                   </div>
+                   <div width="140px" class="prazo">
+                    <div class="data">DATA</div>
+                    <div class="data-numero">24/03/2021</div>
+                     </div>
+                     <div width="180px" class="tipo-pagamento">
+                      <div class="pagamento">PAGAMENTO</div>
+                      <div class="tipo">Cartão de Crédito</div>
+                        </div>
+                       </div>
+                      </div>
+
+                      
             <tbody>
               <tr>  </tr>
             </tbody>
